@@ -1,0 +1,6 @@
+#value_indexed
+#unconditional
+IORING_RESTRICTION_REGISTER_OP
+IORING_RESTRICTION_SQE_OP
+IORING_RESTRICTION_SQE_FLAGS_ALLOWED
+IORING_RESTRICTION_SQE_FLAGS_REQUIRED
