@@ -1,0 +1,7 @@
+#unconditional
+IOSQE_FIXED_FILE
+IOSQE_IO_DRAIN
+IOSQE_IO_LINK
+IOSQE_IO_HARDLINK
+IOSQE_ASYNC
+IOSQE_BUFFER_SELECT
